# romeo_ai_webapp

./: .gitignore  README.md  features.py  google_api_creds.json  main.py  pyproject.toml  settings.cfg  tinder_api.py  user_data.json  user_data_1.json
google-cloud-sdk/.install/: anthoscli-linux-x86_64.snapshot.json  anthoscli.snapshot.json  bq-nix.snapshot.json  bq.manifest  bq.snapshot.json  core-nix.snapshot.json  core.manifest  core.snapshot.json  gcloud-deps-linux-x86_64.snapshot.json  gcloud-deps.manifest  gcloud-deps.snapshot.json  gcloud.snapshot.json  gsutil-nix.snapshot.json  gsutil.manifest  gsutil.snapshot.json
src/: aws_utils.py  diff_utils.py  features.py  tinder_api.py
templates/: error_form.html  form.html  landing_page.html  results.html
