[tool.poetry]
name = "romeoai-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pandas = "^1.2.3"
pytz = "^2021.1"
fuzzywuzzy = "^0.18.0"
spacy = "2.3.2"#"^3.0.5"
en-core-web-sm-abd = "^0.1"
replit = "^2.0.0"
gensim = "^4.0.0"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
